@@ -147,6 +147,9 @@ Print (short, descriptive, long, or complete man) program invocation help, and e
 .B -k, --keysym-press <arg>
 Execute simulated press of keysym at startup. Keysym can be prefixed by a repetition count number. This option can be specified multiple times to simulate multiple keystrokes.
 .TP
+.B -K, --chars-press <arg>
+Execute simulated press of (one or more) keyboard characters. This option can be specified multiple times. After each additional time, a press of Enter key will be prepended.
+.TP
 .B -D {filename}, --load-image-descriptions-file {filename}
 Load image descriptions from {filename}. In {filename} each line is the name of an image file (its basename will be taken), then a Tab character (unless a different character is specified via --image-descriptions-file-separator), then the description text. Each description will be put in the _comment variable of the image at load time. Will override the comment eventually loaded from the file (e.g. JPEG, PNG or TIFF comment). If a '@' followed by a {var} (made by alphabetic and '_' characters) is encountered, and i:{var} is set, its value will be substituted here. If "@#" is encountered, the remainder of the description line is ignored. Special comment lines like "#!fim:var=val" will lead i:var to be assigned value val (unquoted) at image loading time (cached variable); i:var will not be assigned if var starting with underscore ('_'). Special comment lines like "#!fim:+=val" will add val to current description. Special comment lines like "#!fim:^=val" will set val to be the base of each description. Special comment lines like "#!fim:!=" will reset all cached variables. Special comment lines like "#!fim:/=dir" will prepend dir to each file's basename. Special comment lines like "#!fim:\e=dir" will prepend dir to each file's name. Special description text begins with markers:  with "#!fim:=" the last description line to be used; with "#!fim:+" what follows + will be appended to the last description line; with "#!fim:^" what follows ^ will be prepended to the last description line; with "#!fim:s/f/t" the last description line will be used, but occurrences of string f will be substituted with string t (f and t can contain anything but not a /). If val is empty that variable will be unset. These variables are stored also in an internal index used by the limit command. This option sets _caption_over_image=2, so that a caption will be displayed over the image.
 .TP
